--- a/views/create_award.hbs
+++ b/views/create_award.hbs
@@ -4,9 +4,9 @@
   <div class="form-group">
     <label>Type</label>
     <select class="form-control" name="type">
-      <option value="week">Week</option>
-      <option value="month">Month</option>
-      <option value="year">Year</option>
+      <option value="Week">Employee of the Week</option>
+      <option value="Month">Employee of the Month</option>
+      <option value="Year">Employee of the Year</option>
     </select>
   </div>
   <div class="form-group">
